--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.1.1
   google_fonts: ^4.0.1
+  flutter_launcher_icons: ^0.11.0
+  flutter_native_splash: ^2.2.16
 
 dev_dependencies:
   flutter_test:
