--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,17 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+flutter_icons:
+  android: 'launcher_icon'
+  ios: true
+  image_path: 'assets/icon/icon.001.png'
+
+flutter_native_splash:
+  color: '#ffffff'
+  image: assets/splash/splash_screen.001.png
+  android: true
+  ios: true
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
