--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,9 @@ flutter:
   assets:
     - assets/images/success.png
     - assets/images/unsuccess.png
+    - assets/images/title.png
+    - assets/images/item1.png
+    - assets/images/item2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
