--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^4.0.1
   flutter_launcher_icons: ^0.11.0
   flutter_native_splash: ^2.2.16
+  url_launcher: ^6.1.8
 
 dev_dependencies:
   flutter_test:
