--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lovemageddon">
+    package="com.motemagedon.app">
    <application
-        android:label="lovemageddon"
+        android:label="モテマゲドン"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
