--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,12 +75,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/success.png
-    - assets/images/unsuccess.png
-    - assets/images/title.png
-    - assets/images/item1.png
-    - assets/images/item2.png
-    - assets/images/app_images.001.png
+    - assets/images/
+    # - assets/images/success.png
+    # - assets/images/unsuccess.png
+    # - assets/images/title.png
+    # - assets/images/item1.png
+    # - assets/images/item2.png
+    # - assets/images/app_images.001.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
