--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   url_launcher: ^6.1.8
   flutter_native_splash: ^2.2.16
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
